--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
     "eslint": "^5.4.0",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
+    "mongoose": "^5.2.9",
+    "raven": "^2.6.3",
+    "require-dir": "^1.0.0"
   },
   "devDependencies": {
     "eslint-config-airbnb-base": "^13.1.0",
