--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
     "eslint": "^5.4.0",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
