--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.9",
+    "nodemailer": "^4.6.8",
     "raven": "^2.6.3",
     "require-dir": "^1.0.0"
   },
