--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=test mocha __tests__/**/*.test.js --exit",
     "start": "nodemon -e js,json,njk",
     "dev": "nodemon -e js,json,njk"
   },
@@ -16,6 +16,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "eslint": "^5.4.0",
+    "eslint-plugin-chai-friendly": "^0.4.1",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.9",
@@ -24,8 +25,11 @@
     "require-dir": "^1.0.0"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
+    "mocha": "^5.2.0",
     "nodemon": "^1.0.6"
   }
 }
