--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test mocha __tests__/**/*.test.js --exit",
+    "test": "mocha __tests__/**/*.test.js --exit",
     "start": "nodemon -e js,json,njk",
     "dev": "nodemon -e js,json,njk"
   },
